--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,7 @@ body {
   color: var(--primary-text-color);
   background: var(--primary-background-color);
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
   font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
 }
 .list {
@@ -51,6 +49,9 @@ body {
 }
 .auth-nav .link {
   color: var(--primary-text-color);
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -88,15 +89,19 @@ body {
   cursor: pointer;
 }
 /* sectiom */
+/* Our advantages section */
 .section-title {
   color: var(--primary-header-color);
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
 }
 .feature-list .title {
   color: var(--primary-header-color);
+  font-size: 14px;
   line-height: 1.17;
+}
+.feature-list .text {
+  line-height: 1.71;
 }
 .visually-hidden {
   position: absolute;
@@ -110,12 +115,14 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
+
 /* Our team section */
 .our-team {
   background: var(--third-background-color);
 }
 .our-team .title {
   font-weight: 500;
+  font-size: 16px;
   line-height: 1.19;
 }
 .our-team .text {
@@ -134,11 +141,15 @@ body {
 }
 .footer-list .link {
   color: var(--footer-text-color);
+  line-height: 1.71;
 }
 /* portfolio section */
 .filter-btn {
   color: var(--primary-header-color);
   background: var(--third-background-color);
+  font-size: 16px;
+  line-height: 1.63;
+  letter-spacing: 0.03em;
 }
 .filter-btn:hover,
 .filter-btn:focus {
