--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body {
 }
 .filter-btn:hover,
 .filter-btn:focus {
-  color: var(--hero-color);
+  color: var(--secondary-text-color);
   background: var(--accent-color);
   cursor: pointer;
 }
